# glesys-ddns

./: README.md  pyproject.toml
glesys_ddns/: __main__.py  glesys.py  ip.py
